# multimodal-document-intelligence

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  compose.e2e.yaml  compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: api.md  architecture.md  configuration.md  deployment.md  extending.md  operations.md  quickstart.md  security.md  validation.md
docs/multimodal-document-intelligence/: 2026-07-18-open-source-adoption-readiness.md  2026-07-19-rendered-playwright-ci.md
scripts/: check_public_repo.py  generate_sample.py
src/document_intelligence/: __init__.py  application.py  cli.py  config.py  container.py  database.py  jobs.py  models.py  repository.py  sample.py  storage.py
src/document_intelligence/answering/: __init__.py  citations.py  claims.py  service.py
src/document_intelligence/api/: __init__.py  app.py  contracts.py  dependencies.py  errors.py
src/document_intelligence/api/routes/: __init__.py  assets.py  conversations.py  demo.py  documents.py  health.py  jobs.py  queries.py
src/document_intelligence/ingestion/: __init__.py  nodes.py  pipeline.py  upload.py
src/document_intelligence/parsers/: __init__.py  base.py  ocr.py  pdf.py  tables.py  visuals.py
src/document_intelligence/providers/: __init__.py  base.py  deterministic.py  openai.py
src/document_intelligence/retrieval/: __init__.py  index.py  models.py  planner.py  reranker.py  retriever.py  telemetry.py
src/document_intelligence/ui/: __init__.py  app.py  client.py  presentation.py
src/document_intelligence/worker/: __init__.py  runner.py
tests/api/: __init__.py  conftest.py  test_api.py
tests/contract/: test_cli.py  test_packaged_sample.py  test_repository_hygiene.py  test_sample_fixture.py
tests/e2e/: test_api_workflow.py  test_document_workspace.py
tests/eval/: test_golden_questions.py  test_retrieval_quality.py
tests/fixtures/: golden_questions.json
tests/integration/: test_application_lifecycle.py  test_ingestion_pipeline.py  test_repository.py  test_storage.py  test_vector_index.py  test_worker_recovery.py
tests/live/: conftest.py  test_openai_smoke.py
tests/ui/: __init__.py  conftest.py  test_app.py  test_client.py
tests/unit/: test_citations.py  test_config.py  test_models.py  test_nodes.py  test_ocr.py  test_pdf_parser.py  test_providers.py  test_retrieval_planner.py  test_tables.py  test_worker_runner.py
